--- a/WebTienMinh/Views/Home/Index.cshtml
+++ b/WebTienMinh/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<div class="container">
+
+
 
 <div class="jumbotron">
     <h1>TRANG TÍNH LƯƠNG </h1>
@@ -29,5 +32,6 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+    </div>
 
 
