--- a/WebTienMinh/Views/NhanVien/Index.cshtml
+++ b/WebTienMinh/Views/NhanVien/Index.cshtml
@@ -102,7 +102,7 @@
                                 <span class='text-muted font-weight-bold d-block font-size-sm'>Đánh Giá</span> \
                                 </td > \
                             <td class='pr-0 text-right'> \
-                                <a href='#' class='btn btn-light-success font-weight-bolder font-size-sm'>Xem Thêm</a> \
+                                <a href='/NhanVien/ChinhSuaNhanVien?id="+dsnv[i].id+"' class='btn btn-light-success font-weight-bolder font-size-sm'>Sửa Thông Tin</a> \
                             </td> ";
                         str += "</tr>";
                     }
