--- a/WebTienMinh/Views/Shared/_Layout.cshtml
+++ b/WebTienMinh/Views/Shared/_Layout.cshtml
@@ -46,6 +46,11 @@ License: You must have a valid license purchased only from themeforest(the above
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="~/img/Jqueryminhtien.js"></script>
+    <style>
+        .cellchamcong{
+            padding : 5px!important;
+        }
+    </style>
 </head>
 <!--end::Head-->
 <!--begin::Body-->
@@ -157,7 +162,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </svg>
                                         <!--end::Svg Icon-->
                                     </span>
-                                    <span class="menu-text">Chức năng</span>
+                                    <span class="menu-text">Chức năng của Ứng dụng</span>
                                     <i class="menu-arrow"></i>
                                 </a>
                                 <div class="menu-submenu">
@@ -238,11 +243,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <i class="menu-arrow"></i>
                                                 <ul class="menu-subnav">
                                                     <li class="menu-item" aria-haspopup="true">
-                                                        <a href="custom/pages/login/login-1.html" class="menu-link">
+                                                        <a href="/BangChamCong" class="menu-link">
                                                             <i class="menu-bullet menu-bullet-dot">
                                                                 <span></span>
                                                             </i>
-                                                            <span class="menu-text">Login 1</span>
+                                                            <span class="menu-text">Chấm Công</span>
                                                         </a>
                                                     </li>
                                                     <li class="menu-item" aria-haspopup="true">
@@ -2305,9 +2310,9 @@ License: You must have a valid license purchased only from themeforest(the above
                     <!--begin::Entry-->
                     <div class="d-flex flex-column-fluid">
                         <!--begin::Container-->
-                        <div class="container">
+                     
                             @RenderBody()
-						</div>
+						
                         <!--end::Entry-->
                     </div>
                     <!--end::Content-->
