--- a/WebTienMinh/Views/NhanVien/Index.cshtml
+++ b/WebTienMinh/Views/NhanVien/Index.cshtml
@@ -16,7 +16,7 @@
             </h3>
             <div class="card-toolbar">
                 <a href="/NhanVien/ThemMoiNhanVien" class="btn btn-info font-weight-bolder font-size-sm mr-3">Thêm Nhân Viên</a>
-                <a href="#" class="btn btn-danger font-weight-bolder font-size-sm">Quay lại.</a>
+                <a href="/Home" class="btn btn-danger font-weight-bolder font-size-sm">Quay lại.</a>
             </div>
         </div>
         <!--end::Header-->
